--- a/package.json
+++ b/package.json
@@ -1,20 +1,25 @@
 {
   "name": "links-shorter",
   "scripts": {
-    "dev": "tsx watch src/index.ts",
+    "dev": "astro dev",
+    "start": "astro dev",
+    "build": "astro check && astro build",
+    "preview": "astro preview",
+    "astro": "astro",
     "db:push": "drizzle-kit push"
   },
   "dependencies": {
-    "@hono/node-server": "^1.12.2",
+    "astro": "^4.15.1",
+    "@astrojs/check": "^0.9.3",
     "@libsql/client": "^0.10.0",
     "drizzle-orm": "^0.33.0",
-    "hono": "^4.5.9",
     "nanoid": "^5.0.7",
     "try-handler": "^0.0.3"
   },
   "devDependencies": {
     "@types/node": "^20.11.17",
     "drizzle-kit": "^0.24.2",
-    "tsx": "^4.7.1"
+    "tsx": "^4.7.1",
+    "typescript": "^5.5.4"
   }
 }
