--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,4 +1,5 @@
 {
+  "extends": "astro/tsconfigs/strictest",
   "compilerOptions": {
     "target": "ESNext",
     "module": "ESNext",
@@ -8,7 +9,14 @@
     "types": [
       "node"
     ],
-    "jsx": "react-jsx",
-    "jsxImportSource": "hono/jsx",
+    "baseUrl": ".",
+    "paths": {
+      "@db/*": [
+        "src/db/*"
+      ],
+      "@/*": [
+        "src/*"
+      ]
+    }
   }
 }
