chore: Refactor Hono class instantiation and handle error cases in /shorten endpoint

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,7 +16,10 @@
       ],
       "@/*": [
         "src/*"
-      ]
+      ],
+      "@services/*": [
+        "src/services/*"
+      ],
     }
   }
 }
