--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "links-shorter",
+  "type": "module",
   "scripts": {
     "dev": "astro dev",
     "start": "astro dev",
@@ -9,12 +10,14 @@
     "db:push": "drizzle-kit push"
   },
   "dependencies": {
-    "astro": "^4.15.1",
     "@astrojs/check": "^0.9.3",
+    "@astrojs/node": "^8.3.3",
+    "@astrojs/vercel": "^7.8.0",
     "@libsql/client": "^0.10.0",
+    "astro": "^4.15.1",
     "drizzle-orm": "^0.33.0",
-    "nanoid": "^5.0.7",
-    "try-handler": "^0.0.3"
+    "sharp": "^0.33.5",
+    "try-handler": "^0.0.5"
   },
   "devDependencies": {
     "@types/node": "^20.11.17",
