--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,6 +20,9 @@
       "@services/*": [
         "src/services/*"
       ],
+      "@components/*": [
+        "src/components/*"
+      ],
     }
   }
 }
