--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@libsql/client": "^0.10.0",
     "astro": "^4.15.1",
     "drizzle-orm": "^0.33.0",
+    "nanoid": "^5.0.7",
     "sharp": "^0.33.5",
     "try-handler": "^0.0.5"
   },
