--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@astrojs/check": "^0.9.3",
+    "@astrojs/vercel": "^7.8.0",
     "@libsql/client": "^0.10.0",
     "astro": "^4.15.1",
     "drizzle-orm": "^0.33.0",
@@ -21,7 +22,6 @@
   "devDependencies": {
     "@types/node": "^20.11.17",
     "drizzle-kit": "^0.24.2",
-    "tsx": "^4.7.1",
     "typescript": "^5.5.4"
   }
 }
