--- a/package.json
+++ b/package.json
@@ -1,27 +1,32 @@
 {
-  "name": "links-shorter",
-  "type": "module",
+  "name": "my-app",
+  "version": "0.1.0",
+  "private": true,
   "scripts": {
-    "dev": "astro dev",
-    "start": "astro dev",
-    "build": "astro check && astro build",
-    "preview": "astro preview",
-    "astro": "astro",
-    "db:push": "drizzle-kit push"
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start",
+    "lint": "next lint"
   },
   "dependencies": {
-    "@astrojs/check": "^0.9.3",
-    "@astrojs/vercel": "^7.8.0",
     "@libsql/client": "^0.10.0",
-    "astro": "^4.15.1",
     "drizzle-orm": "^0.33.0",
     "nanoid": "^5.0.7",
+    "next": "14.2.7",
+    "react": "^18",
+    "react-dom": "^18",
     "sharp": "^0.33.5",
     "try-handler": "^0.0.5"
   },
   "devDependencies": {
-    "@types/node": "^20.11.17",
+    "@types/node": "^20",
+    "@types/react": "^18",
+    "@types/react-dom": "^18",
     "drizzle-kit": "^0.24.2",
-    "typescript": "^5.5.4"
+    "eslint": "^8",
+    "eslint-config-next": "14.2.7",
+    "postcss": "^8",
+    "tailwindcss": "^3.4.1",
+    "typescript": "^5"
   }
 }
