--- a/package.json
+++ b/package.json
@@ -6,10 +6,11 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "db:push": "drizzle-kit push"
   },
   "dependencies": {
-    "@libsql/client": "^0.10.0",
+    "better-sqlite3": "^11.2.1",
     "drizzle-orm": "^0.33.0",
     "nanoid": "^5.0.7",
     "next": "14.2.7",
@@ -19,6 +20,7 @@
     "try-handler": "^0.0.5"
   },
   "devDependencies": {
+    "@types/better-sqlite3": "^7.6.11",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
