--- a/package.json
+++ b/package.json
@@ -10,10 +10,10 @@
     "db:push": "drizzle-kit push"
   },
   "dependencies": {
-    "better-sqlite3": "^11.2.1",
     "drizzle-orm": "^0.33.0",
     "nanoid": "^5.0.7",
     "next": "14.2.7",
+    "pg": "^8.12.0",
     "react": "^18",
     "react-dom": "^18",
     "sharp": "^0.33.5",
@@ -22,6 +22,7 @@
   "devDependencies": {
     "@types/better-sqlite3": "^7.6.11",
     "@types/node": "^20",
+    "@types/pg": "^8.11.8",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "drizzle-kit": "^0.24.2",
