--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "db:push": "drizzle-kit push"
   },
   "dependencies": {
+    "@hono/swagger-ui": "^0.4.1",
     "drizzle-orm": "^0.33.0",
+    "hono": "^4.5.11",
     "nanoid": "^5.0.7",
     "next": "14.2.7",
     "postgres": "^3.4.4",
