--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@hono/swagger-ui": "^0.4.1",
+    "@hono/zod-openapi": "^0.16.0",
     "drizzle-orm": "^0.33.0",
     "hono": "^4.5.11",
     "nanoid": "^5.0.7",
